# MoodAngels-Reproduction

./: .gitignore  README.md  README_LLM.md  compare_all_three.py  compare_rule_vs_llm.py  pyproject.toml
data/: syn_test.json
examples/: example_case.json
moodangels/: __init__.py  agents.py  agents_llm.py  api.py  cli.py  data.py  debate.py  granular.py  judge.py  llm_client.py  pipeline.py  pipeline_full.py  retrieval.py  schemas.py
tests/: baseline_llm_only.py  batch_test.py  batch_test_full.py  batch_test_with_llm.py  debug_single_case.py  debug_single_case_simple.py  debug_test.py  direct_test.py  quick_test.py  run_test.py  simple_example.py  test_pipeline.py  test_results.json  test_results_baseline_llm_only.json  test_results_full_version copy.json  test_results_full_version.json  test_results_llm.json  test_results_rule.json  测试结果.md
