[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moodangels-complete"
version = "0.1.0"
description = "Research reproduction of a retrieval-augmented multi-agent framework for mood-disorder screening on MoodSyn-style data."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0", "pandas>=1.5", "numpy>=1.23"]

[project.optional-dependencies]
llm = ["openai>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=7"]

[project.scripts]
moodangels = "moodangels.cli:main"
